assets/css/style.css
* {
  padding: 0px;
  margin: 0px;
}

.parent,
html {
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  width: 100vw;
  /* background-color: aliceblue; */
}

.top-heading {
  font-family: Poppins, serif;
  font-size: 70px;
}

.tagline {
  margin-top: 20px;
  font-size: 55px;
  font-family: Roboto, serif;
}

.social-link {
  text-decoration: none;
  color: inherit;
  margin: 0px 30px 0px 0px;
}

.social-section {
  margin-top: 40px;
}

.social-icon {
  width: 50px;
}

.right {
  margin: 30px 0px 10px 0px;
  display: flex;
  justify-content: center;
  height: 500px;
  width: 450px;
}

.blob {
  filter: drop-shadow(20px 20px 0px rgb(219, 232, 243));
}

#update {
  position: fixed;
  bottom: 10px;
  text-align: center;
  font-size: 15px;
  font-family: Roboto, serif;
}

